--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,13 @@ os:
 install:
   - curl -L https://raw.githubusercontent.com/roswell/roswell/$ROSWELL_BRANCH/scripts/install-for-ci.sh | sh
   - ros asdf install
-  - if [ x$TRAVIS_TAG != x ]; then git clone https://github.com/snmsts/sn.github.git ~/lisp/sn.github; fi
+  - git clone https://github.com/snmsts/sn.github.git ~/lisp/sn.github
+  - ros ./scripts/release.ros
 
 cache:
   directories:
     - $HOME/.roswell
+    - $HOME/lisp
 
 before_script:
   - ros version
