--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ os:
 install:
   - curl -L https://raw.githubusercontent.com/roswell/roswell/$ROSWELL_BRANCH/scripts/install-for-ci.sh | sh
   - ros asdf install
-  - if ! [ -f "$HOME/lisp/sn.github/sn.github.asd" ]; then git clone https://github.com/snmsts/sn.github.git ~/lisp/sn.github;fi
+  - if ! [ -f "$HOME/lisp/sn.github/sn.github.asd" ]; then ros install snmsts/sn.github;fi
   - ros ./scripts/release.ros dummy
 
 cache:
