--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ os:
   - linux
 
 install:
-  - if [ $TRAVIS_OS_NAME = windows ]; then choco install -y openssl.light; fi
   - curl -L https://raw.githubusercontent.com/roswell/roswell/$ROSWELL_BRANCH/scripts/install-for-ci.sh | sh
   - ros asdf install
+  - ros install fukamachi/dexador/winhttp
   - ros install snmsts/sn.github
   - ros ./scripts/release.ros dummy
 
